--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 // For those who want the bleeding edge
 buildscript {
     repositories {
@@ -25,17 +24,34 @@ repositories {
         name "Mobius Repo"
         url "http://mobiusstrip.eu/maven"
     }
-	maven {
-		name "Raoulvdberge"
-		url  "https://repo.raoulvdberge.com/"
-	}
+	//maven {
+	//	name "Raoulvdberge"
+	//	url  "https://repo.raoulvdberge.com/" // dead as of 09/10/2024 - is it somewhere on "https://raoul.dev/" now?
+	//}
 	maven {
 		name = "Amadornes"
 		url "http://maven.amadornes.com/"
 	}
+
     maven {
-        name "progwml"
-        url "http://dvs1.progwml6.com/files/maven"
+        url = "https://maven.creeperhost.net"
+    }
+    maven {
+        url "https://www.cursemaven.com"
+    }
+    maven {
+        url = "https://maven.theillusivec4.top/"
+    }
+    maven {
+        name 'JEI'
+        url 'https://dvs1.progwml6.com/files/maven/'
+    }
+    maven {
+        url "http://maven.cil.li"
+    }
+    maven {
+        name = "CurseForge"
+        url = "https://minecraft.curseforge.com/api/maven/"
     }
 }
 
@@ -69,9 +85,7 @@ dependencies {
     deobfCompile ('RebornCore:RebornCore-1.12.2:+:universal'){
 		transitive = false
 	}
-    deobfCompile ('refinedstorage:refinedstorage:1.6.12-+'){
-		transitive = false
-	}
+    compile project(':refinedstorage')
 }
 
 processResources
